# pyXMLSecurity

./: .travis.yml  nose2.cfg  pyproject.toml
.github/workflows/: CI.yml
src/xmlsec/: __init__.py
src/xmlsec/test/: p11_test.py
